--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "django-browser-reload>=1.21.0",
     "django-countries>=8.2.0",
     "django-debug-toolbar>=6.2.0",
+    "django-mptt>=0.18.0",
     "django-tailwind>=4.2.0",
     "flake8>=7.3.0",
     "flake8-isort>=6.1.2",
