--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,5 +17,6 @@ dependencies = [
     "flake8-isort>=6.1.2",
     "onlinepayments-sdk-python3>=6.4.0",
     "pillow>=11.3.0",
+    "pytest-django>=4.12.0",
     "python-decouple>=3.8",
 ]
