--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,12 @@ dependencies = [
     "django-debug-toolbar>=6.2.0",
     "django-mptt>=0.18.0",
     "django-tailwind>=4.2.0",
+    "factory-boy>=3.3.3",
     "flake8>=7.3.0",
     "flake8-isort>=6.1.2",
     "onlinepayments-sdk-python3>=6.4.0",
     "pillow>=11.3.0",
     "pytest-django>=4.12.0",
+    "pytest-factoryboy>=2.8.1",
     "python-decouple>=3.8",
 ]
