--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ django-debug-toolbar==6.2.0
 django-js-asset==3.1.2
 django-mptt==0.18.0
 django-tailwind==4.2.0
+factory-boy==3.3.3
+faker==40.5.1
 flake8==7.3.0
 flake8-isort==6.1.2
 idna==3.10
